header footer slider edit

--- a/Community/index.html
+++ b/Community/index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
+    <div>
+        <button class="chatshortcut">채팅으로 바로가기 <i class="fas fa-angle-right"></i></button>
+    </div>
     <header>
-        <div class="inner_container">
+        <div class="header_inner_container">
             <div class="logo_nav">
                 <img class="logo" src="./ssArtboard 1.svg">
                 <nav>
@@ -37,13 +40,72 @@
     </header>
     <main>
         <div class="carousel">
-            <div>
-                
+            <img src="black-1072366.jpg">
+        </div>
+        <div class="main_inner_container">
+            <h1>
+                커튼콜과 함께하는 연극배우
+            </h1>
+            <div class="mainactorlist">
+                <div class="mainactor">
+                    <div class="actor">
+                        <img class="actorimg" src="scarf-3339049.jpg">
+                    </div>
+                    <div class="actorinfo">
+                        <p class="actorname">김재한&nbsp;<small>배우</small></p>
+                        <ul>
+                            <li>
+                                공공공공 (21.06.01 ~ 21.06.02)
+                            </li>
+                            <li>
+                                옥탑방 고양이 (21.06.01 ~ 21.06.02)
+                            </li>
+                            <li>
+                                대나무 꽃 (21.06.01 ~ 21.06.02)
+                            </li>
+                        </ul>
+                        <div class="actorlink">
+                                <button><i class="fab fa-facebook-square"></i>
+                                </button>
+                                <button><i class="fab fa-instagram"></i>
+                                </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
-    <footer>
 
+    <footer>
+        <div class="footer_container">
+            <div class="footer_inner_container">
+                <img class="footerlogo" src="ssArtboard 1.svg">
+                <table>
+                    <tr>
+                        <td class="tablestrong">Notice</td>
+                        <td>----- 공지사항 -----</td>
+                    </tr>
+                    <tr>
+                        <td class="tablestrong">Pages</td>
+                        <td class="pagelinks">
+                            <a>연극</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a>커뮤니티</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a>팀소개</a>
+                        </td>
+                    </tr>
+                </table>
+                <div class="contact">
+                    <div class="address">
+                        서울특별시 종로구 대학로 116 공공일호 4층<br>010 - 1234 - 5678&nbsp;&nbsp;|&nbsp;&nbsp;kkaetoli@gmail.com
+                    </div>
+                    <div class="snslink">
+                        <button><i class="fab fa-youtube"></i></button>
+                        <button><i class="fab fa-instagram"></i></button>
+                        <img class="gschool" src="거꾸로_캠퍼스(positive)_가로형.png">
+                    </div>
+                </div>
+                <p class="copyright">
+                    Copyright© 2021. Hyunseo all right reserved
+                </p>
+            </div>
     </footer>
 </body>
 
