--- a/Community/index.html
+++ b/Community/index.html
@@ -39,11 +39,26 @@
         </div>
     </header>
     <main>
-        <div class="carousel">
-            <img src="black-1072366.jpg">
+        <div class="carouselctn">
+            <div class="carousel">
+                <div class="carouselItem1">
+                    <img src="./black-1072366.jpg">
+                </div>
+                <div class="carouselItem2">
+                    <img src="./black-1072366.jpg">
+                </div>
+                <div class="carouselItem3">
+                    <img src="./black-1072366.jpg">
+                </div>
+            </div>
+            <div class="btnctn">
+                <button class="carouselbtn carouselbtn1"></button>
+                <button class="carouselbtn carouselbtn2"></button>
+                <button class="carouselbtn carouselbtn3"></button>
+            </div>
         </div>
         <div class="main_inner_container">
-            <h1>
+            <h1 class="actortitle">
                 커튼콜과 함께하는 연극배우
             </h1>
             <div class="mainactorlist">
@@ -65,14 +80,124 @@
                             </li>
                         </ul>
                         <div class="actorlink">
-                                <button><i class="fab fa-facebook-square"></i>
-                                </button>
-                                <button><i class="fab fa-instagram"></i>
-                                </button>
+                            <button><i class="fab fa-facebook-square"></i>
+                            </button>
+                            <button><i class="fab fa-instagram"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="mainactor">
+                    <div class="actor">
+                        <img class="actorimg" src="scarf-3339049.jpg">
+                    </div>
+                    <div class="actorinfo">
+                        <p class="actorname">김재한&nbsp;<small>배우</small></p>
+                        <ul>
+                            <li>
+                                공공공공 (21.06.01 ~ 21.06.02)
+                            </li>
+                            <li>
+                                옥탑방 고양이 (21.06.01 ~ 21.06.02)
+                            </li>
+                            <li>
+                                대나무 꽃 (21.06.01 ~ 21.06.02)
+                            </li>
+                        </ul>
+                        <div class="actorlink">
+                            <button><i class="fab fa-facebook-square"></i>
+                            </button>
+                            <button><i class="fab fa-instagram"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="mainactor mainactorlast">
+                    <div class="actor">
+                        <img class="actorimg" src="scarf-3339049.jpg">
+                    </div>
+                    <div class="actorinfo">
+                        <p class="actorname">김재한&nbsp;<small>배우</small></p>
+                        <ul>
+                            <li>
+                                공공공공 (21.06.01 ~ 21.06.02)
+                            </li>
+                            <li>
+                                옥탑방 고양이 (21.06.01 ~ 21.06.02)
+                            </li>
+                            <li>
+                                대나무 꽃 (21.06.01 ~ 21.06.02)
+                            </li>
+                        </ul>
+                        <div class="actorlink">
+                            <button><i class="fab fa-facebook-square"></i>
+                            </button>
+                            <button><i class="fab fa-instagram"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="boardtitle">
+                <h1>
+                    게시판
+                </h1>
+                <div class="writebutton">
+                    <button class="write">+&nbsp;글쓰기</button>
+                    <div class="actorinput">
+                        <input class="actornameinput" type="text" placeholder="답변을 원하는 배우명을 입력하세요!">
+                        <textarea class="textinput" placeholder="글을 입력하세요!"></textarea>
+                    </div>
+                </div>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="maintablenum">번호</th>
+                        <th>제목</th>
+                        <th class="maintablename">배우</th>
+                        <th class="maintablename">작성자</th>
+                        <th class="maintabledate">등록일</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="maintablenum">5</td>
+                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                        <td class="maintablename">김현서</td>
+                        <td class="maintablename">김나우</td>
+                        <td class="maintabledate">2021-06-21</td>
+                    </tr>
+                    <tr>
+                        <td class="maintablenum">4</td>
+                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                        <td class="maintablename">김현서</td>
+                        <td class="maintablename">김나우</td>
+                        <td class="maintabledate">2021-06-21</td>
+                    </tr>
+                    <tr>
+                        <td class="maintablenum">3</td>
+                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                        <td class="maintablename">김현서</td>
+                        <td class="maintablename">김나우</td>
+                        <td class="maintabledate">2021-06-21</td>
+                    </tr>
+                    <tr>
+                        <td class="maintablenum">2</td>
+                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                        <td class="maintablename">김현서</td>
+                        <td class="maintablename">김나우</td>
+                        <td class="maintabledate">2021-06-21</td>
+                    </tr>
+                    <tr>
+                        <td class="maintablenum">1</td>
+                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                        <td class="maintablename">김현서</td>
+                        <td class="maintablename">김나우</td>
+                        <td class="maintabledate">2021-06-21</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </main>
 
@@ -103,10 +228,11 @@
                     </div>
                 </div>
                 <p class="copyright">
-                    Copyright© 2021. Hyunseo all right reserved
+                    Copyright© 2021. Kkaetory all right reserved
                 </p>
             </div>
     </footer>
+    <script src="./index.js"></script>
 </body>
 
 </html>
