--- a/Login/index.html
+++ b/Login/index.html
@@ -13,10 +13,12 @@
 
 <body>
     <div id="container">
-        <!-- <img src=""> -->
         <div class="menubtn">
             <div class="menubtn_burger"></div>
         </div>
+        <h1>
+            대학로 연극의<br>온기를 전달합니다.
+        </h1>
     </div>
     <form id="login">
         <div class="loginForm">
