--- a/Community/index.html
+++ b/Community/index.html
@@ -31,31 +31,47 @@
                 </div>
             </div>
             <div class="profilebox">
-                <div class="profile">
-                    <img class="profileImage" src="./PaintJS[🎨].png">
-                </div>
-                <i class="fas fa-caret-down"></i>
+                <nav>
+                    <a>LogIn</a>
+                    <a>SignUp</a>
+                    <form id="login">
+                        <div class="loginForm">
+                            <div class="loginLogo"><img src="ssArtboard 1.svg" /></div>
+                            <h2>로그인</h2>
+                            <input class="loginId" type="text" placeholder="아이디">
+                            <input class="loginPw" type="text" placeholder="비밀번호">
+                            <div class="loginAdd">
+                                <p class="loginKeep"><input type="checkbox"><label>로그인 유지</label></p>
+                                <div class="accountnull">계정이 없으신가요? <a href="">회원가입</a></div>
+                            </div>
+                            <button class="loginBtn">로그인</button>
+                            <div class="loginOr">OR</div>
+                            <button class="loginGl">Google을 사용하여 로그인</button>
+                            <button class="loginFb">Facebook을 사용하여 로그인</button>
+                            <div class="accountforgot">계정을 잊으셨나요? <a href="">아이디 / 비밀번호 찾기</a></div>
+                        </div>
+                        <div class="loginCompany">
+                            <img src="ssArtboard 1.svg"/>
+                        </div>
+                    </form>
+                </nav>
+                <i class="far fa-user"></i>
             </div>
         </div>
     </header>
     <main>
         <div class="carouselctn">
             <div class="carousel">
-                <div class="carouselItem1">
-                    <img src="./black-1072366.jpg">
-                </div>
-                <div class="carouselItem2">
-                    <img src="./black-1072366.jpg">
-                </div>
-                <div class="carouselItem3">
-                    <img src="./black-1072366.jpg">
-                </div>
+                <img class="carouselItem" src="./black-1072366.jpg">
+                <img class="carouselItem" src="./1.jpg">
+                <img class="carouselItem" src="./2.jpg">
             </div>
-            <div class="btnctn">
-                <button class="carouselbtn carouselbtn1"></button>
-                <button class="carouselbtn carouselbtn2"></button>
-                <button class="carouselbtn carouselbtn3"></button>
-            </div>
+        </div>
+        <div class="btnctn">
+            <button class="carouselbtn carouselbtn1"></button>
+            <button class="carouselbtn carouselbtn2"></button>
+            <button class="carouselbtn carouselbtn3"></button>
+        </div>
         </div>
         <div class="main_inner_container">
             <h1 class="actortitle">
