File sort & Header edit

--- a/Community/index.html
+++ b/Community/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="header_inner_container">
             <div class="logo_nav">
-                <img class="logo" src="./ssArtboard 1.svg">
+                <img class="logo" src="images/ssArtboard 1.svg">
                 <nav>
                     <a href="">연극</a>
                     <a href="">커뮤니티</a>
@@ -34,25 +34,20 @@
                 <nav>
                     <a>LogIn</a>
                     <a>SignUp</a>
-                    <form id="login">
-                        <div class="loginForm">
-                            <div class="loginLogo"><img src="ssArtboard 1.svg" /></div>
-                            <h2>로그인</h2>
-                            <input class="loginId" type="text" placeholder="아이디">
-                            <input class="loginPw" type="text" placeholder="비밀번호">
-                            <div class="loginAdd">
-                                <p class="loginKeep"><input type="checkbox"><label>로그인 유지</label></p>
-                                <div class="accountnull">계정이 없으신가요? <a href="">회원가입</a></div>
-                            </div>
-                            <button class="loginBtn">로그인</button>
-                            <div class="loginOr">OR</div>
-                            <button class="loginGl">Google을 사용하여 로그인</button>
-                            <button class="loginFb">Facebook을 사용하여 로그인</button>
-                            <div class="accountforgot">계정을 잊으셨나요? <a href="">아이디 / 비밀번호 찾기</a></div>
+                    <form class="loginForm">
+                        <div class="loginLogo"><img src="images/ssArtboard 1.svg" /></div>
+                        <h2>로그인</h2>
+                        <input class="loginId" type="text" placeholder="아이디">
+                        <input class="loginPw" type="text" placeholder="비밀번호">
+                        <div class="loginAdd">
+                            <p class="loginKeep"><input type="checkbox"><label>로그인 유지</label></p>
+                            <div class="accountnull">계정이 없으신가요? <a href="">회원가입</a></div>
                         </div>
-                        <div class="loginCompany">
-                            <img src="ssArtboard 1.svg"/>
-                        </div>
+                        <button class="loginBtn">로그인</button>
+                        <div class="loginOr">OR</div>
+                        <button class="loginGl">Google을 사용하여 로그인</button>
+                        <button class="loginFb">Facebook을 사용하여 로그인</button>
+                        <div class="accountforgot">계정을 잊으셨나요? <a href="">아이디 / 비밀번호 찾기</a></div>
                     </form>
                 </nav>
                 <i class="far fa-user"></i>
@@ -62,9 +57,15 @@
     <main>
         <div class="carouselctn">
             <div class="carousel">
-                <img class="carouselItem" src="./black-1072366.jpg">
-                <img class="carouselItem" src="./1.jpg">
-                <img class="carouselItem" src="./2.jpg">
+                <div class="carouselItemctn">
+                    <img class="carouselItem" src="images/black-1072366.jpg">
+                </div>
+                <div class="carouselItemctn">
+                    <img class="carouselItem" src="images/1.jpg">
+                </div>
+                <div class="carouselItemctn">
+                    <img class="carouselItem" src="images/2.jpg">
+                </div>
             </div>
         </div>
         <div class="btnctn">
@@ -74,153 +75,157 @@
         </div>
         </div>
         <div class="main_inner_container">
-            <h1 class="actortitle">
-                커튼콜과 함께하는 연극배우
-            </h1>
-            <div class="mainactorlist">
-                <div class="mainactor">
-                    <div class="actor">
-                        <img class="actorimg" src="scarf-3339049.jpg">
-                    </div>
-                    <div class="actorinfo">
-                        <p class="actorname">김재한&nbsp;<small>배우</small></p>
-                        <ul>
-                            <li>
-                                공공공공 (21.06.01 ~ 21.06.02)
-                            </li>
-                            <li>
-                                옥탑방 고양이 (21.06.01 ~ 21.06.02)
-                            </li>
-                            <li>
-                                대나무 꽃 (21.06.01 ~ 21.06.02)
-                            </li>
-                        </ul>
-                        <div class="actorlink">
-                            <button><i class="fab fa-facebook-square"></i>
-                            </button>
-                            <button><i class="fab fa-instagram"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="mainactor">
-                    <div class="actor">
-                        <img class="actorimg" src="scarf-3339049.jpg">
-                    </div>
-                    <div class="actorinfo">
-                        <p class="actorname">김재한&nbsp;<small>배우</small></p>
-                        <ul>
-                            <li>
-                                공공공공 (21.06.01 ~ 21.06.02)
-                            </li>
-                            <li>
-                                옥탑방 고양이 (21.06.01 ~ 21.06.02)
-                            </li>
-                            <li>
-                                대나무 꽃 (21.06.01 ~ 21.06.02)
-                            </li>
-                        </ul>
-                        <div class="actorlink">
-                            <button><i class="fab fa-facebook-square"></i>
-                            </button>
-                            <button><i class="fab fa-instagram"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="mainactor mainactorlast">
-                    <div class="actor">
-                        <img class="actorimg" src="scarf-3339049.jpg">
-                    </div>
-                    <div class="actorinfo">
-                        <p class="actorname">김재한&nbsp;<small>배우</small></p>
-                        <ul>
-                            <li>
-                                공공공공 (21.06.01 ~ 21.06.02)
-                            </li>
-                            <li>
-                                옥탑방 고양이 (21.06.01 ~ 21.06.02)
-                            </li>
-                            <li>
-                                대나무 꽃 (21.06.01 ~ 21.06.02)
-                            </li>
-                        </ul>
-                        <div class="actorlink">
-                            <button><i class="fab fa-facebook-square"></i>
-                            </button>
-                            <button><i class="fab fa-instagram"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="boardtitle">
-                <h1>
-                    게시판
+            <section>
+                <h1 class="actortitle">
+                    커튼콜과 함께하는 연극배우
                 </h1>
-                <div class="writebutton">
-                    <button class="write">+&nbsp;글쓰기</button>
-                    <div class="actorinput">
-                        <input class="actornameinput" type="text" placeholder="답변을 원하는 배우명을 입력하세요!">
-                        <textarea class="textinput" placeholder="글을 입력하세요!"></textarea>
+                <div class="mainactorlist">
+                    <div class="mainactor">
+                        <div class="actor">
+                            <img class="actorimg" src="actor/scarf-3339049.jpg">
+                        </div>
+                        <div class="actorinfo">
+                            <p class="actorname">김재한&nbsp;<small>배우</small></p>
+                            <ul>
+                                <li>
+                                    공공공공 (21.06.01 ~ 21.06.02)
+                                </li>
+                                <li>
+                                    옥탑방 고양이 (21.06.01 ~ 21.06.02)
+                                </li>
+                                <li>
+                                    대나무 꽃 (21.06.01 ~ 21.06.02)
+                                </li>
+                            </ul>
+                            <div class="actorlink">
+                                <button><i class="fab fa-facebook-square"></i>
+                                </button>
+                                <button><i class="fab fa-instagram"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mainactor">
+                        <div class="actor">
+                            <img class="actorimg" src="actor/scarf-3339049.jpg">
+                        </div>
+                        <div class="actorinfo">
+                            <p class="actorname">김재한&nbsp;<small>배우</small></p>
+                            <ul>
+                                <li>
+                                    공공공공 (21.06.01 ~ 21.06.02)
+                                </li>
+                                <li>
+                                    옥탑방 고양이 (21.06.01 ~ 21.06.02)
+                                </li>
+                                <li>
+                                    대나무 꽃 (21.06.01 ~ 21.06.02)
+                                </li>
+                            </ul>
+                            <div class="actorlink">
+                                <button><i class="fab fa-facebook-square"></i>
+                                </button>
+                                <button><i class="fab fa-instagram"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mainactor mainactorlast">
+                        <div class="actor">
+                            <img class="actorimg" src="actor/scarf-3339049.jpg">
+                        </div>
+                        <div class="actorinfo">
+                            <p class="actorname">김재한&nbsp;<small>배우</small></p>
+                            <ul>
+                                <li>
+                                    공공공공 (21.06.01 ~ 21.06.02)
+                                </li>
+                                <li>
+                                    옥탑방 고양이 (21.06.01 ~ 21.06.02)
+                                </li>
+                                <li>
+                                    대나무 꽃 (21.06.01 ~ 21.06.02)
+                                </li>
+                            </ul>
+                            <div class="actorlink">
+                                <button><i class="fab fa-facebook-square"></i>
+                                </button>
+                                <button><i class="fab fa-instagram"></i>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <table>
-                <thead>
-                    <tr>
-                        <th class="maintablenum">번호</th>
-                        <th>제목</th>
-                        <th class="maintablename">배우</th>
-                        <th class="maintablename">작성자</th>
-                        <th class="maintabledate">등록일</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="maintablenum">5</td>
-                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
-                        <td class="maintablename">김현서</td>
-                        <td class="maintablename">김나우</td>
-                        <td class="maintabledate">2021-06-21</td>
-                    </tr>
-                    <tr>
-                        <td class="maintablenum">4</td>
-                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
-                        <td class="maintablename">김현서</td>
-                        <td class="maintablename">김나우</td>
-                        <td class="maintabledate">2021-06-21</td>
-                    </tr>
-                    <tr>
-                        <td class="maintablenum">3</td>
-                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
-                        <td class="maintablename">김현서</td>
-                        <td class="maintablename">김나우</td>
-                        <td class="maintabledate">2021-06-21</td>
-                    </tr>
-                    <tr>
-                        <td class="maintablenum">2</td>
-                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
-                        <td class="maintablename">김현서</td>
-                        <td class="maintablename">김나우</td>
-                        <td class="maintabledate">2021-06-21</td>
-                    </tr>
-                    <tr>
-                        <td class="maintablenum">1</td>
-                        <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
-                        <td class="maintablename">김현서</td>
-                        <td class="maintablename">김나우</td>
-                        <td class="maintabledate">2021-06-21</td>
-                    </tr>
-                </tbody>
-            </table>
+            </section>
+            <section>
+                <div class="boardtitle">
+                    <h1>
+                        게시판
+                    </h1>
+                    <div class="writebutton">
+                        <button class="write">+&nbsp;글쓰기</button>
+                        <div class="actorinput">
+                            <input class="actornameinput" type="text" placeholder="답변을 원하는 배우명을 입력하세요!">
+                            <textarea class="textinput" placeholder="글을 입력하세요!"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th class="maintablenum">번호</th>
+                            <th>제목</th>
+                            <th class="maintablename">배우</th>
+                            <th class="maintablename">작성자</th>
+                            <th class="maintabledate">등록일</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="maintablenum">5</td>
+                            <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                            <td class="maintablename">김현서</td>
+                            <td class="maintablename">김나우</td>
+                            <td class="maintabledate">2021-06-21</td>
+                        </tr>
+                        <tr>
+                            <td class="maintablenum">4</td>
+                            <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                            <td class="maintablename">김현서</td>
+                            <td class="maintablename">김나우</td>
+                            <td class="maintabledate">2021-06-21</td>
+                        </tr>
+                        <tr>
+                            <td class="maintablenum">3</td>
+                            <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                            <td class="maintablename">김현서</td>
+                            <td class="maintablename">김나우</td>
+                            <td class="maintabledate">2021-06-21</td>
+                        </tr>
+                        <tr>
+                            <td class="maintablenum">2</td>
+                            <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                            <td class="maintablename">김현서</td>
+                            <td class="maintablename">김나우</td>
+                            <td class="maintabledate">2021-06-21</td>
+                        </tr>
+                        <tr>
+                            <td class="maintablenum">1</td>
+                            <td>대학로 연극 커뮤니티 커튼콜 오픈</td>
+                            <td class="maintablename">김현서</td>
+                            <td class="maintablename">김나우</td>
+                            <td class="maintabledate">2021-06-21</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </div>
     </main>
 
     <footer>
         <div class="footer_container">
             <div class="footer_inner_container">
-                <img class="footerlogo" src="ssArtboard 1.svg">
+                <img class="footerlogo" src="images/ssArtboard 1.svg">
                 <table>
                     <tr>
                         <td class="tablestrong">Notice</td>
@@ -240,7 +245,7 @@
                     <div class="snslink">
                         <button><i class="fab fa-youtube"></i></button>
                         <button><i class="fab fa-instagram"></i></button>
-                        <img class="gschool" src="거꾸로_캠퍼스(positive)_가로형.png">
+                        <img class="gschool" src="images/거꾸로_캠퍼스(positive)_가로형.png">
                     </div>
                 </div>
                 <p class="copyright">
